manifests/policies/NetworkPolicies/elastic-operator-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elastic-operator
  namespace: elastic-system
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
    - ports:
        - port: 6443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 10.0.2.15/32
    - ports:
        - port: 9200
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              common.k8s.elastic.co/type: elasticsearch
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.2.15/32
      ports:
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  policyTypes:
    - Ingress
    - Egress
